Fixed segfault in wordwrap() when wrapping to zero width and using multi-character break or trying to force cut (bug #12768, now fails and issues a warning because forcing a zero-width cut doesn't make sense). Also converted to new paramater-passing API and avoid making an extra copy of the return values. # also added tests. @- Fixed segfault in wordwrap() when wrapping to zero width and using @  multi-character break or trying to force cut (bug #12768). (Jim)